# PokemonHiddenRed_012025

./: .gitignore  CMakeLists.txt
.github/workflows/: clang-format.yml  pull_request_checks.yml
BinaryGenerator/: simpleTextInteraction.csv  singleInteractionBinaryGen.py
documentation/: BASE convertitore righe CSV.ipynb
engine/: CMakeLists.txt
engine/Include/: Cloud.hpp  DialogueBox.hpp  MapEngine.hpp  Scene.hpp
engine/include/: ChoiceBox.hpp  Cloud.hpp  DialogueBox.hpp  MapEngine.hpp  Scene.hpp  TileEngine.hpp
engine/src/: ChoiceBox.cpp  Cloud.cpp  DialogueBox.cpp
game/include/: BinaryFileManager.hpp  Entity.hpp  Interaction.hpp  Map.hpp  Movement.hpp  NPC.hpp  Object.hpp  Tile.hpp  utils.hpp
game/src/: BinaryFileManager.cpp  Entity.cpp  Interaction.cpp  Map.cpp  Movement.cpp  NPC.cpp  Object.cpp  Tile.cpp
tests/: CMakeLists.txt
tests/unit-tests/: ut_Tile.hpp
